# droe

./: .gitignore  Cargo.toml  DROELANG_LANGUAGE_SPECIFICATION.md  DROELANG_PROGRESS.md  FRAGMENT_SYSTEM_SPECIFICATION.md  MOBILE_MIGRATION.md  Modelfile.droe-scribe  README.md  ROELANG_LANGUAGE_SPECIFICATION.md  ROELANG_PROGRESS.md  build-droevm.sh  build-installer.sh  build-mac-installer.sh  build-roevm.sh  compiler.py  compiler_standalone.py  development_log.md  dmg-settings.py  droe  installer_gui.py  roe  run.js  run_tests.sh  sync-dev.sh  test_all_conditions.droe  test_char_iteration.droe  test_compound_conditions.droe  test_consistent_mobile.py  test_fragment_system.droe  test_line_error.droe  test_regular_for.droe  test_regular_for2.droe  test_target_compatibility.py  update_runtime.py  vscode_test_error.droe
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
archive/: compiler_legacy.py  legacy_compiler.py
assets/: icon.icns
compiler/: ARCHITECTURE.md  README.md  __init__.py  ast.py  codegen_base.py  codegen_wat.py  compiler.py  module_resolver.py  parser.py  symbols.py  target_factory.py  type_checker.py
compiler/libs/: __init__.py
compiler/parser/: __init__.py  base.py  core.py  expressions.py  statements.py  structures.py  ui_components.py  ui_components_old.py
compiler/targets/: __init__.py
droe-cli/: Cargo.toml
droe-cli/src/: build_system.rs  cache.rs  interactive.rs  main.rs  mobile.rs  package_manager.rs  runtime_updater.rs  utils.rs  watch.rs
droe-compiler/: Cargo.toml  PARSER_REFACTOR.md
droe-compiler/examples/: compiler_factory_demo.rs  complete_architecture_demo.rs  enhanced_parser_demo.rs  fastapi_demo.rs  spring_demo.rs
droe-compiler/src/: ast.rs  codegen_base.rs  compiler_factory.rs  diagnostics.rs  expressions.rs  lexer.rs  lib.rs  module_resolver.rs  symbols.rs  type_checker.rs
droe-compiler/src/adapters/: mod.rs
droe-compiler/src/adapters/go/: mod.rs
droe-compiler/src/adapters/go/fiber/: mod.rs
droe-compiler/src/adapters/go/fiber/templates/: database.go.tera  go.mod.tera  handlers.go.tera  main.go.tera  models.go.tera  routes.go.tera
droe-compiler/src/adapters/java/: mod.rs
droe-compiler/src/adapters/java/spring/: mod.rs
droe-compiler/src/adapters/java/spring/templates/: application.java.tera  application.properties.tera  controller.java.tera  entity.java.tera  pom.xml.tera  readme.md.tera  repository.java.tera  service.java.tera
droe-compiler/src/adapters/mobile/: android.rs  ios.rs  mod.rs
droe-compiler/src/adapters/mobile/android/templates/: api_service.kt.tera  app_build.gradle.tera  form_activity.kt.tera  layout.xml.tera  manifest.xml.tera  network_module.kt.tera  repository.kt.tera
droe-compiler/src/adapters/mobile/ios/templates/: api_service.swift.tera  app.swift.tera  content_view.swift.tera  form_view.swift.tera  info.plist.tera  layout_view.swift.tera  models.swift.tera  project.pbxproj.tera
droe-compiler/src/adapters/node/: mod.rs
droe-compiler/src/adapters/node/fastify/: mod.rs
droe-compiler/src/adapters/node/fastify/templates/: .env.tera  handlers.js.tera  package.json.tera  routes.js.tera  schema.prisma.tera  server.js.tera
droe-compiler/src/adapters/python/: mod.rs
droe-compiler/src/adapters/python/fastapi/: mod.rs
droe-compiler/src/adapters/python/fastapi/templates/: database.py.tera  main.py.tera  models.py.tera  requirements.txt.tera  routers.py.tera  schemas.py.tera
droe-compiler/src/codegen/: bytecode.rs  go.rs  java.rs  mobile.rs  mod.rs  python.rs  rust.rs  wasm_runtime.rs  webassembly.rs
droe-compiler/src/codegen/html/: javascript.rs  mod.rs
droe-compiler/src/codegen/puck/: mod.rs  reverse.rs
droe-compiler/src/codegen/utils/: formatting.rs  math_utils.rs  mod.rs  string_utils.rs
droe-compiler/src/parser/: base.rs  database.rs  metadata.rs  mod.rs  statements.rs  structures.rs  ui_components.rs
droe-compiler/tests/: bytecode_test.rs  core_utilities_test.rs  fastapi_test.rs  parser_integration_tests.rs  python_test.rs  rust_test.rs
droe-llm/: Cargo.toml  JSONRPC_MIGRATION.md  README.md  build.rs
droe-llm/docs/: grpc_wrapper_usage.md
droe-llm/examples/: test_grpc_wrapper.rs
droe-llm/proto/: llm_service.proto
droe-llm/src/: lib.rs  main.rs
droe-llm/src/client/: grpc_client.rs  grpc_wrapper.rs  jsonrpc_client.rs  mod.rs
droe-llm/src/config/: mod.rs
droe-llm/src/intelligence/: mod.rs  mode_detector.rs  partial_updates.rs  validator.rs
droe-llm/src/providers/: mod.rs  ollama.rs
droe-llm/src/service/: grpc_server.rs  jsonrpc_server.rs  llm_service.rs  mod.rs
droe-llm/src/session/: manager.rs  mod.rs
droe-lsp/: Cargo.toml
droe-lsp/src/: lib.rs
droevm/: Cargo.toml  README.md  build.rs
droevm/src/: bytecode.rs  embed.rs  main.rs  vm.rs
examples/: README.md  basic_syntax.roe  demo.roe  droeconfig.json  legacy_syntax.roe  limitations.roe  roeconfig.json  simple_counter.roe  test_alias.droe  test_error.droe  test_error2.droe  test_interpolation.droe  test_invalid_types.droe  variables_and_loops.roe
examples/assets/: app.js  custom-styles.css  global.css  main.js
examples/html-test/: droeconfig.json  roeconfig.json
examples/layouts/: app_layout.droe  standalone_layouts.droe
examples/mobile-project-example/: droeconfig.json  roeconfig.json
examples/puck-droe/: droeconfig.json  (+1 more)
models/: Modelfile.droe-scribe
roevm/: Cargo.toml  README.md
roevm/src/: embed.rs  main.rs  vm.rs
screen-test/: droeconfig.json
scripts/: run_tests.sh  sync-dev.sh
specs/: DROE_LANGUAGE_SPECIFICATION.md
src/: cli.rs  compiler.rs  daemon.rs  llm.rs  lsp.rs  main.rs  vm.rs
tests/: README.md  roeconfig_go.json  run_tests.sh  test_comprehensive.roe  test_consistent_mobile.py  test_data.roe  test_data_simple.droe  test_data_structures.roe  test_db_parsing.py  test_dsl.roe  test_go_fiber.droe  test_mobile_compilation.py  test_param_action.roe  test_roe_simple.droe  test_roe_simple.roe  test_roe_target.droe  test_roe_target.roe  test_simple.roe  test_string_concatenation.droe  test_target_compatibility.py  test_user_db.roe  test_user_db_output
(+219 files in other folders)
