[workspace]
members = [
    "droe-compiler",
    "droe-cli",
    "droe-lsp",
    "droevm"  # Keep existing VM for now
]
resolver = "2"

[workspace.dependencies]
# Common dependencies shared across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# LSP dependencies
tower-lsp = "0.20"
lsp-types = "0.94"

# Parser dependencies  
nom = "7.1"
regex = "1.10"

# Template engine
tera = "1.19"

# Additional CLI dependencies
rusqlite = "0.31"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
sha2 = "0.10"
hex = "0.4"
notify = "6.1"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
fs_extra = "1.3"
glob = "0.3"
url = "2.5"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
home = "0.5"