[package]
name = "droe"
version = "1.0.0"
edition = "2021"
description = "Droelang - Unified CLI, Compiler, VM, LLM, and LSP"

[lints]
workspace = true

[[bin]]
name = "droe"
path = "src/main.rs"

[workspace]
members = [
    "droe-compiler", 
    "droe-llm"
]
resolver = "2"

[workspace.lints.rust]
unused_variables = "warn"
dead_code = "allow"
unused_imports = "allow" 

[workspace.lints.clippy]
unused_doc_comments = "allow"

[dependencies]
# Core compiler and libraries
droe-compiler = { path = "droe-compiler" }
droe-llm = { path = "droe-llm" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# LSP dependencies
tower-lsp = "0.20"
lsp-types = "0.94"

# CLI dependencies
rusqlite = "0.31"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
fs_extra = "1.3"
glob = "0.3"
url = "2.5"
notify = "6.1"
home = "0.5"

# VM dependencies
wasmtime = "25.0"
wat = "1.0"

[workspace.dependencies]
# Common dependencies shared across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
nom = "7.1"
regex = "1.10"
tera = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3"