[package]
name = "droe-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "droe"
path = "src/main.rs"

[dependencies]
droe-compiler = { path = "../droe-compiler" }
droe-lsp = { path = "../droe-lsp" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
# Core dependencies without problematic ones
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.5"
glob = "0.3"
dirs = "5.0"