[package]
name = "droe-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
droe-compiler = { path = "../droe-compiler" }
tower-lsp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[lib]
name = "droe_lsp"
path = "src/lib.rs"