[package]
name = "droevm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
# Lightweight async runtime - only what's needed for VM
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Optional LLM client dependencies - only if we need to call DroeLLM
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }

[features]
default = []
llm-client = ["tonic", "prost"]

[build-dependencies]
# Only build proto files if LLM client feature is enabled
tonic-build = { version = "0.10", optional = true }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
